# tinysh

./: CMakeLists.txt  README.md
include/: arena.h  ast.h  executor.h  parser.h  tokenizer.h
src/: arena.c  executor.c  main.c  parser.c  tokenizer.c
